syntax = "proto3";
package anndb_proto_internal;

service RaftTransport {
	
}